# catch-analysis-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  _build_container  _container_aid  _docker  _test_local  env-template  pyproject.toml  requirements.local.txt  requirements.prod.txt  tox.ini
.github/workflows/: ac-tests.yml  astrometrynet-venv.yml  ci.yml
catch_analysis_tools/: astrometry.py  background.py  photometry.py
catch_analysis_tools/app/: __init__.py  app.py
catch_analysis_tools/app/api/: openapi.yaml
catch_analysis_tools/app/services/: astrometry.cfg  photometry.py
catch_analysis_tools/tests/: astrometry_test.py  background_test.py  photometry_test.py
catch_analysis_tools/tests/data/: Comet_65P_Gunn_LONEOS.fits  real_sky.fits
docker/: Dockerfile  Dockerfile.local  build.sh  run.sh
scripts/: Checking_indexfiles.py
