[project]
name = "catch_analysis_tools"
description = "A package to support analysis tools within the CATCH interface"
readme = "README.md"
authors = [
    { name = "Ben Sharkey", email = "sharkey@umd.edu" },
    { name = "Michael Kelley", email = "msk@astro.umd.edu" },
    { name = "Yaeji Kim", email = "ykim1231@umd.edu" },
    { name = "John Dailey", email = "dailey@umd.edu" },
]
license = "BSD-3-Clause"
dependencies = [
    "numpy>=2.0",
    "astropy>=6.1",
    "photutils",
    "scipy",
    "matplotlib",
    "scikit-image",
    "pandas>=3.0",
    "sep",
    "fitsio",
    "calviacat",
    "mastcasjobs",
    "connexion[flask,swagger-ui,uvicorn]>=3.3.0",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["catch_analysis_tools"]

[project.urls]
homepage = "https://catch.astro.umd.edu/"

[tool.setuptools_scm]
write_to = "catch_analysis_tools/version.py"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-remotedata",
    "pytest-cov",   
    "tox"
]
dev = ["build"]

[tool.pytest.ini_options]
addopts = "--cov=catch_analysis_tools --cov-report=term-missing"
markers = [
    "integration: tests that run solve-field and require astrometry.net index files"
]